--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,26 +6,34 @@ body{
     background-image: url(../1670002105_25-kartinkin-net-p-fon-kalyan-vkontakte-26.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
+    
+}
+header{
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100px;
 }
 .navbar1 ul{
     display: flex;
-    margin: 10px 0 0 1500px;
-    list-style: none;
-
+    list-style-type: none;
+    margin-left: 170px; 
 }
 .navbar1 li{
     margin-left: 40px;
+    margin-top: 60px;
+}
+.navbar1 a{
+    text-decoration: none;
+    color: white;
 }
 h1{
     color: white;
-    text-align: center;
-    margin-top: 60px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-left: 300px;
 }
 .navbar2{
     background-color: rgb(41, 40, 40);
-    width: 100%;
 }
 .navbar2 a{
     text-decoration: none;
@@ -33,7 +41,7 @@ h1{
 }
 .navbar2 ul{
     display: flex;
-    margin: 10px 0 0 700px;
+    justify-content: center;
     color: white;
     font-size: 30px;
     list-style: none;
@@ -42,10 +50,11 @@ h1{
     margin-left: 70px;
 }
 .searcher{
- margin-left: 1000px;   
- margin-top: 20px;
- color: white;
- font-size: 20px;
+    display: flex;
+    justify-content: flex-end;
+    color: white;
+    font-size: 20px;
+    margin:30px 200px 20px 0
 }
 .search{
     border-radius: 16px;
@@ -106,7 +115,6 @@ footer {
     color: white;
     font-weight: bold;
     font-size: 18px;
-    margin-top: 200px;
     background-color: rgb(37, 3, 30);
     text-align: center;
 }
